# mojang-api-monitor-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/mojang_api_monitor/: __init__.py  cli.py  models.py  monitor.py
tests/: test_monitor.py
