[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojang-api-monitor"
version = "1.0.1"
description = "监控 Mojang API 各服务状态的 Python 库"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["minecraft", "mojang", "api", "monitor"]
authors = [
    { name = "XChen446", email = "XChen446@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
build = [
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/PCL-Community/Mojang-API-Monitor"
Repository = "https://github.com/PCL-Community/Mojang-API-Monitor"

[project.scripts]
mojang-api-monitor = "mojang_api_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mojang_api_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
